apps/infrastructure/src/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iagent
  labels:
    name: iagent
    purpose: iagent-application
